--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -28,13 +28,13 @@
         <section>
             <ul>
                 <li>
-                    <p id="formResults">Form Results:</p><br>
+                    <p id="formResults">Results from URL:</p><br>
                 </li>
                 <li>
                     <strong id="analysisText">Text entered:</strong>
                     <div id="results"></div><br>
                 </li>
-                <li>
+               <li>
                     <strong id="analysisText">Polarity:</strong>
                     <div id="polarity"></div><br>
                 </li>
@@ -55,25 +55,12 @@
         <p>This is a footer</p>
     </footer>
     <script>
-        // Check that service workers are supported     
         if ('serviceWorker' in navigator) {
-            // Use the window load event to keep the page load performant         
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
-                    // Registration was successful
-                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                }, function (error) {
-                    // registration failed :(
-                    console.log('ServiceWorker registration failed: ', error);
+                navigator.serviceWorker.register('/service-worker.js').then(function (registration) {    
                 });
             });
         };       
-    </script>
-    <!-- Trying to not have form results data on the page, when a user refreshes the page -->
-    <script>
-        if (window.history.replaceState) {
-            window.history.replaceState(null, null, window.location.href);
-        }
     </script>
 </body>
 
