--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -11,7 +11,7 @@
 
     <h1>
         Evaluate News 
-    </h1>
+    </h1> <br>
     <main>
         <section>
             <p><br>
@@ -25,7 +25,7 @@
             </form>
         </section>
 
-        <section>
+        <section class=results>
             <ul>
                 <li>
                     <p id="formResults">Results from URL:</p><br>
@@ -37,6 +37,10 @@
                <li>
                     <strong id="analysisText">Polarity:</strong>
                     <div id="polarity"></div><br>
+                </li>
+                <li>
+                    <strong id=analysisText>Subjectivity Confidence </strong>
+                    <div id=subjectivity_confidence></div><br><br>
                 </li>
                 <li>
                     <strong id="analysisText">Subjectivity:</strong>
