--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -17,7 +17,7 @@ h1 {
     color: black;
     padding: 0;
     font-size: 40px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: sans-serif;
     text-align: left;
 
 }
@@ -27,14 +27,14 @@ strong {
     font-weight: bold; 
     padding: 0;
     font-size: 16px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: sans-serif;
     text-align: left;
 }
 
 .output{
     padding: 0;
     font-size: 16px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: sans-serif;
     text-align: left;
 }
 
@@ -42,7 +42,7 @@ strong {
     color: red;
     padding: 0;
     font-size: 16px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: sans-serif;
     text-align: left;
 }
 
@@ -50,6 +50,6 @@ strong {
     color: black;
     padding: 0;
     font-size: 16px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: sans-serif;
     text-align: left;
 }
