--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -14,7 +14,7 @@
     <main>
         <section>
             <p><strong>
-                    Analyse Text or a URL for validity.
+                    Analyse Text or a URL.
                 </strong></p>
         </section>
         <section>
